add remote file system and new file name style etc.
(1) site module
1、add js/css refresh args config support - "ServerConfig.xml#site_cdn_addr_args".
2、add support server push config to users - "ServerConfig.xml#site_client_config", resolved #13
3、replace "px" to "em" to define the size of the element so that the display size is the same at different pix, resolved #12
4、modify page allow user zoom.
5、add gzip compression annotation and add to some special requests.
6、optimize the api for getting the rank list in the Cache.
7、add md5 tool in FileUtil.
8、modify help article id config func.
9、add new query ip location callback.
10、enhanced verification code verification security.

(1) file module
1、optimize the code structure in file service.
2、add remote file system interface, resolved #10
2、add remote file system implement base aliyun oss - "ServerConfig.xml#remote_oss_config_location, oss.properties".
3、add a my cloud share token page for aliyun oss.
4、upgrade file name old style to new style, resolved #11
    set "true" for "site_allow_run_upgrade" in ServerConfig.xml,
    then run "http://hostname/manager.do?method=upgradeNewFileNameStyle" to upgrade.

(1) album module
1、add photo preview compress setting - "ServerConfig.xml#cloud_photo_preview_args", resolved #14
2、add album tags support users with special setting for each tag.
3、increased display column count in album pages for better support for retina screen.
4、add "the displayed image pixel is different" under different column numbers.